# sparsecore

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: profile_x86_baseline.yml  test.yml  validate_40m_scalar.yml  validate_avx2_microbench.yml  wheels.yml
csrc/: .gitkeep  bindings.cpp
csrc/bench/: avx2_dot_microbench.cpp
csrc/kernels/: dense_grad.cpp  dense_grad.hpp  double_tensor.cpp  double_tensor.hpp  padded_csr.cpp  padded_csr.hpp  parallel.hpp  spmm.cpp  spmm.hpp  spmm_avx2.cpp  spmm_avx2.hpp  spmm_grad.cpp  spmm_grad.hpp  spmm_grad_avx2.cpp  spmm_grad_avx2.hpp  spmm_grad_neon.cpp  spmm_grad_neon.hpp  spmm_neon.cpp  spmm_neon.hpp  vector_dot.cpp  vector_dot.hpp  vector_dot_neon.cpp  vector_dot_neon.hpp
docs/: LANDSCAPE.md  PROJECT_OVERVIEW.md
docs/demos/: .gitkeep  demo_13_samples.txt  demo_15_10k_all_samples.txt  demo_15_10k_samples.txt  demo_16_60m_samples.txt  demo_20_global_skip_samples.txt  demo_20_nb050_samples.txt  demo_20_nb080_samples.txt  milestone_01.md  milestone_02.md  milestone_03.md  milestone_04.md  milestone_05.md  milestone_06.md  milestone_07.md  milestone_08.md  milestone_09.md  milestone_10.md  milestone_11.md  milestone_12.md  milestone_13.md  milestone_14.md
docs/design/: padded_csr.md  padding_ratio.md  rigl.md  router.md  sparse_linear.md  spmm.md  spmm_backward.md  spmm_backward_avx2.md  spmm_backward_neon.md  spmm_forward_avx2.md  tiny_transformer.md
examples/: .gitkeep  colab_try_sparsecore.ipynb  colab_try_sparselab.ipynb  demo_01_bridge.py  demo_02_dot.py  demo_03_spmm.py  demo_04_autograd.py  demo_04b_honest_benchmark.py  demo_05_mnist.py  demo_06_convergence.py  demo_07_90pct_convergence.py  demo_08_sparse_full_convergence.py  demo_09_parallel_speedup.py  demo_10_set_vs_static.py  demo_11_rigl_vs_set_vs_static.py  demo_12_drop_fraction_sweep.py  demo_13_tiny_transformer.py  demo_14_sparse_attention.py  demo_15_mini_gpt.py  demo_16_mini_gpt_60m.py  demo_17_dw_neon.py  demo_18_global_skip_mnist.py  demo_20_global_skip_transformer.py  profile_dw_baseline.py  profile_phase1_timing_table.py  spike_transformer_profile.py  validate_40m_dw.py
scripts/: repair_wheel_macos.sh  smoke_test.py  test_fresh_install.sh  test_on_sagemaker.md
sparsecore/: .gitkeep  __init__.py  layout.py  nn.py  ops.py  router.py
sparselab/: __init__.py  layout.py  nn.py  ops.py  router.py
tests/: .gitkeep  conftest.py  test_bridge.py  test_dense_grad.py  test_padded_csr.py  test_padded_csr_rewrite.py  test_padded_csr_transpose.py  test_rigl.py  test_router.py  test_set.py  test_set_rigl_with_cache.py  test_sparse_linear.py  test_spmm.py  test_spmm_autograd.py  test_spmm_grad.py  test_spmm_grad_avx2.py  test_spmm_grad_neon.py  test_spmm_neon.py  test_spmm_parallel.py  test_transpose_cache.py  test_vector_dot.py
